name:                psi
version:             0.1.0.0
synopsis:            psi
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2016 Sharif Olorin
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Psi
  build-depends:       base >= 3 && < 5
                     , bytestring >= 0.10
                     , semigroups >= 0.16
                     , text >= 1.2

  default-language:    Haskell2010
